fix a little responsive bug (too much width on the menu)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ nav {
 .container {
     /* max-width: 1159px; */
     width: 80%;
-    height: 100vh;
+    /* height: 100vh; */
     margin: auto;
 }
 
@@ -57,8 +57,8 @@ nav {
 .voile {
     display: none;
     background-color: rgba(36, 42, 69, 100);
-    height: 101vh;
-    width: 101vw;
+    height: 100vh;
+    width: 100vw;
     position: absolute;
     top: 0;
     z-index: -10000;
@@ -115,7 +115,6 @@ nav {
     color: #242A45;
     transition: all .5s ease-in-out;
 }
-
 /* The navigation */
 .nav-links {
     display: flex;
@@ -125,6 +124,10 @@ nav {
     justify-content: space-between;
     animation-name: appear;
     animation-duration: 1s;
+}
+.nav-links-social {
+    display: none;
+    justify-content: center;
 }
 .nav-links li {
     margin-left: 2rem;
